kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tienda-musica
  labels:
    app.kubernetes.io/name: tienda-musica
