kubernetes/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: tienda-musica
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: server
          image: tienda-musica-server:latest # Reemplazar con el tag de tu registro si usas uno (ej. username/tienda-musica-server:latest)
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: sqlite-storage
              mountPath: /app/data
      volumes:
        - name: sqlite-storage
          persistentVolumeClaim:
            claimName: sqlite-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: tienda-musica
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30082
  type: NodePort
