kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tienda-musica-ingress
  namespace: tienda-musica
  annotations:
    # Si utilizas NGINX Ingress Controller, estas anotaciones permiten reescribir
    # las peticiones /api/auth/login hacia el backend como /auth/login automáticamente.
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx # Cambiar a 'traefik' o el nombre de tu Ingress Class si es diferente
  rules:
    - http:
        paths:
          # Ruta para el Backend (NestJS)
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          # Ruta para el Frontend (Next.js)
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
